--- a/TodoListApplication/src/main/resources/TodoListApplication.fxml
+++ b/TodoListApplication/src/main/resources/TodoListApplication.fxml
@@ -1,53 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollBar?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TreeTableColumn?>
-<?import javafx.scene.control.TreeTableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="506.0" prefWidth="1032.0" style="-fx-background-color: #41B3A3;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ButtonsControl">
+<AnchorPane prefHeight="469.0" prefWidth="1076.0" style="-fx-background-color: #41B3A3;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ButtonsControl">
     <children>
-        <AnchorPane layoutY="65.0" prefHeight="441.0" prefWidth="1076.0" style="-fx-background-color: #85DCBA;">
+        <AnchorPane layoutY="65.0" prefHeight="404.0" prefWidth="1076.0" style="-fx-background-color: #85DCBA;">
             <children>
-                <TreeTableView prefHeight="306.0" prefWidth="750.0">
-                    <columns>
-                        <TreeTableColumn prefWidth="28.0" text="ID" />
-                        <TreeTableColumn prefWidth="136.0" text="Task" />
-                        <TreeTableColumn prefWidth="454.0" text="Description" />
-                        <TreeTableColumn text="Due Date" />
-                        <TreeTableColumn minWidth="0.0" prefWidth="51.0" text="Status" />
-                        <TreeTableColumn prefWidth="454.0" text="Description" />
-                    </columns>
-                </TreeTableView>
-                <Button layoutX="977.0" layoutY="270.0" mnemonicParsing="false" onAction="#AddTask" prefHeight="25.0" prefWidth="85.0" text="Add Task" />
-                <Button layoutX="797.0" layoutY="341.0" mnemonicParsing="false" onAction="#EditTask" prefHeight="25.0" prefWidth="115.0" text="Edit Task" />
-                <Button layoutX="942.0" layoutY="341.0" mnemonicParsing="false" onAction="#DeleteTask" prefHeight="25.0" prefWidth="115.0" text="Delete Task" />
-                <Button layoutX="455.0" layoutY="357.0" mnemonicParsing="false" onAction="#LoadFile" prefHeight="44.0" prefWidth="205.0" text="Load">
+            <TableView fx:id="taskList" prefHeight="306.0" prefWidth="751.0">
+              <columns>
+                <TableColumn fx:id="taskColumn" onEditCommit="#editTaskName" prefWidth="121.0" resizable="false" text="Task" />
+                <TableColumn fx:id="descriptionColumn" onEditCommit="#editTaskDescript" prefWidth="504.0" resizable="false" text="Description" />
+                  <TableColumn fx:id="dueDateColumn" onEditCommit="#editDueDate" prefWidth="86.0" resizable="false" text="Due Date" />
+                  <TableColumn fx:id="statusColumn" prefWidth="39.0" resizable="false" text="Done" />
+              </columns>
+            </TableView>
+                <Button fx:id="addButton" layoutX="974.0" layoutY="270.0" mnemonicParsing="false" onAction="#addTask" prefHeight="25.0" prefWidth="85.0" text="Add Task" />
+                <Button fx:id="deleteButton" layoutX="976.0" layoutY="306.0" mnemonicParsing="false" onAction="#deleteTask" prefHeight="25.0" prefWidth="85.0" text="Delete Task" />
+                <Button layoutX="524.0" layoutY="334.0" mnemonicParsing="false" onMouseClicked="#getFile" prefHeight="44.0" prefWidth="205.0" text="Load">
                     <font>
                         <Font size="20.0" />
                     </font>
                 </Button>
-                <Button layoutX="122.0" layoutY="357.0" mnemonicParsing="false" onAction="#SaveFile" prefHeight="44.0" prefWidth="205.0" text="Save">
+                <Button fx:id="saveButton" layoutX="191.0" layoutY="334.0" mnemonicParsing="false" onMouseClicked="#saveFile" prefHeight="44.0" prefWidth="205.0" text="Save">
                     <font>
                         <Font size="20.0" />
                     </font>
                 </Button>
-                <ScrollBar fx:id="Scrollbar" layoutX="750.0" layoutY="24.0" orientation="VERTICAL" prefHeight="282.0" prefWidth="14.0" />
-                <TextField fx:id="TaskName" layoutX="792.0" layoutY="72.0" prefHeight="25.0" prefWidth="272.0" promptText="Task" />
-                <TextField fx:id="TaskDescription" alignment="TOP_LEFT" layoutX="792.0" layoutY="108.0" prefHeight="154.0" prefWidth="272.0" promptText="Description" />
-                <DatePicker fx:id="TaskDueDate" layoutX="792.0" layoutY="270.0" promptText="Select Due Date" />
-                <Label layoutX="792.0" layoutY="2.0" prefHeight="66.0" prefWidth="282.0" text="Create New Task" textAlignment="CENTER" textFill="WHITE" underline="true">
+                <ScrollBar fx:id="Scrollbar" layoutX="750.0" layoutY="25.0" orientation="VERTICAL" prefHeight="281.0" prefWidth="14.0" />
+                <TextField fx:id="taskName" layoutX="789.0" layoutY="72.0" prefHeight="25.0" prefWidth="272.0" promptText="Task" />
+                <TextField fx:id="taskDescription" alignment="TOP_LEFT" layoutX="789.0" layoutY="108.0" prefHeight="154.0" prefWidth="272.0" promptText="Description" />
+                <DatePicker fx:id="taskDueDate" layoutX="789.0" layoutY="270.0" onAction="#getDate" promptText="Select Due Date" />
+                <Label layoutX="789.0" layoutY="2.0" prefHeight="66.0" prefWidth="282.0" text="Create New Task" textAlignment="CENTER" textFill="WHITE" underline="true">
                     <font>
                         <Font name="Britannic Bold" size="37.0" />
                     </font>
                 </Label>
+            <Button fx:id="clearButton" layoutX="976.0" layoutY="344.0" mnemonicParsing="false" onAction="#clearText" prefHeight="25.0" prefWidth="85.0" text="Clear Data" />
             </children>
         </AnchorPane>
         <Label alignment="CENTER" layoutX="20.0" layoutY="-2.0" text="TO DO LIST" textFill="WHITE">
@@ -55,16 +52,6 @@
                 <Font name="Britannic Bold" size="65.0" />
             </font>
         </Label>
-        <MenuButton layoutX="867.0" layoutY="14.0" mnemonicParsing="false" onAction="#ListFilter" prefHeight="30.0" prefWidth="169.0" text="Filter">
-            <items>
-                <MenuItem mnemonicParsing="false" text="All" />
-                <MenuItem mnemonicParsing="false" text="Date" />
-                <MenuItem mnemonicParsing="false" text="Incomplete" />
-                <MenuItem mnemonicParsing="false" text="Completed" />
-            </items>
-            <font>
-                <Font size="14.0" />
-            </font>
-        </MenuButton>
+      <ComboBox fx:id="taskFilter" layoutX="904.0" layoutY="13.0" onAction="#listFilter" prefHeight="30.0" prefWidth="158.0" promptText="Filter" />
     </children>
 </AnchorPane>
