--- a/TodoListApplication/src/main/resources/style.css
+++ b/TodoListApplication/src/main/resources/style.css
@@ -1,13 +1,13 @@
-.table-view *.scroll-bar:vertical *.increment-button,
-.table-view *.scroll-bar:vertical *.decrement-button {
+.table-view *.scroll-bar:horizontal *.increment-button,
+.table-view *.scroll-bar:horizontal *.decrement-button {
     -fx-background-color: null;
     -fx-background-radius: 0;
     -fx-background-insets: 0;
     -fx-padding: 0;
 }
 
-.table-view *.scroll-bar:vertical *.increment-arrow,
-.table-view *.scroll-bar:vertical *.decrement-arrow {
+.table-view *.scroll-bar:horizontal *.increment-arrow,
+.table-view *.scroll-bar:horizontal *.decrement-arrow {
     -fx-background-color: null;
     -fx-background-radius: 0;
     -fx-background-insets: 0;
